--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" type="text/css" href="css/style.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap"
-			rel="stylesheet" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;800;900&family=Inter:wght@900&display=swap" rel="stylesheet">
 		<title>Riding Cities</title>
 	</head>
 	<body>
 		<div class="container">
 			<header>
-				<img src="images/header.png" alt="skateboard sur un sol goudronné" />
+				<img src="images/header.png" alt="skateboard sur un sol goudronné">
 				<div class="headerTextContent">
 					<h1>RIDING CITIES</h1>
 				</div>
@@ -57,20 +55,20 @@
 					</div>
 				</section>
 				<section class="sectionLinearGradientBackground whiteContentSection">
-					<h2 >Les membres fondateurs</h2>
+					<h2>Les membres fondateurs</h2>
 					<div class="directionRow">
 						<article class="textCenter">
-							<img src="./images/soraya.png" alt="Soraya Longboard" />
+							<img src="./images/soraya.png" alt="Soraya Longboard">
 							<h3>Soraya</h3>
 							<p>Longboard</p>
 						</article>
 						<article class="textCenter">
-							<img src="./images/marc.png" alt="Marc Street" />
+							<img src="./images/marc.png" alt="Marc Street">
 							<h3>Marc</h3>
 							<p>Street</p>
 						</article>
 						<article class="textCenter">
-							<img src="./images/pedro.png" alt="Pedro Pool" />
+							<img src="./images/pedro.png" alt="Pedro Pool">
 							<h3>Pedro</h3>
 							<p>Pool</p>
 						</article>
@@ -78,10 +76,13 @@
 				</section>
 				<section class="sectionLightGreyBackground">
 					<h2>Découvrez nos cours</h2>
-
 					<div class="directionColumn">
-						<a class="button buttonRounded buttonMainColor buttonHighlight" href="documents/planning-adultes.pdf">Télécharger le planning de cours pour adultes</a>
-						<a class="button buttonRounded buttonSecondColor buttonHighlight" href="documents/planning-enfants.pdf">Télécharger le planning de cours pour enfants</a>
+						<a class="button buttonRounded buttonMainColor buttonHighlight" href="documents/planning-adultes.pdf">
+							Télécharger le planning de cours pour adultes
+						</a>
+						<a class="button buttonRounded buttonSecondColor buttonHighlight" href="documents/planning-enfants.pdf">
+							Télécharger le planning de cours pour enfants
+						</a>
 					</div>
 				</section>
 			</main>
